[package]
name = "md6"
version = "0.1.0"
description = "MD6 hash function"
authors = ["Guorong Du"]
edition = "2021"
keywords = ["crypto", "md6", "hash", "digest"]
# categories = ["cryptography", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "md6"

[dependencies]
digest = "=0.11.0-pre.8"
cfg-if = "1"

[dev-dependencies]
digest = { version = "=0.11.0-pre.8", features = ["dev"] }
hex-literal = "0.4"

[features]
default = ["oid", "std"]
std = ["digest/std"]
oid = ["digest/oid"] # Enable OID support
zeroize = ["digest/zeroize"]
force-soft = [] # Force software implementation
