[package]
name = "md6_std"
version = "0.1.0"
description = "MD6 hash function"
authors = ["Guorong Du"]
edition = "2021"
keywords = ["crypto", "md6", "hash", "digest"]
# categories = ["cryptography", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "md6"

[dependencies]
